Publish command now implemented with MPC. Also updated Footer with year to test functionality

--- a/website/templates/foot.html
+++ b/website/templates/foot.html
@@ -1,6 +1,6 @@
 <hr width="95%">
 <div class="footer">
-&copy;<i>Mossneuk: Mossneuk Parish Church</i> &nbsp;&nbsp; <a href="legal.html">Legal</a>
+&copy;<i>2015 - Mossneuk Parish Church</i> &nbsp;&nbsp; <a href="legal.html">Legal</a>
 </div>
 </div>
 </body>
