Added Meta information to Header template

--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -3,10 +3,16 @@
 <head>
   <title>Mossneuk Parish Church</title>
   <meta charset="utf-8">
+  <meta name="description" content="Mossneuk Parish Church, East Kilbride, Scotland">
+  <meta name="keywords" content="Mossneuk, Community, Parish, Church, Church of Scotland, Worship, Gardenhall, East Kilbride">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/mpc.css">
+
   <link href='http://fonts.googleapis.com/css?family=Oxygen:400' rel='stylesheet' type='text/css'>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
 </head>
