Added a few more keywords to header

--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -4,7 +4,7 @@
   <title>Mossneuk Parish Church</title>
   <meta charset="utf-8">
   <meta name="description" content="Mossneuk Parish Church, East Kilbride, Scotland">
-  <meta name="keywords" content="Mossneuk, Community, Parish, Church, Church of Scotland, Worship, Gardenhall, East Kilbride">
+  <meta name="keywords" content="Mossneuk Parish Church, Mossneuk, Community, Parish, Church, Church of Scotland, Worship, Gardenhall, East Kilbride">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
