Added link to Facebook page.

--- a/website/templates/foot.html
+++ b/website/templates/foot.html
@@ -1,4 +1,5 @@
 <hr width="95%">
+<p> <a href="https://www.facebook.com/pages/Mossneuk-Parish-Church/1419438808341012" target="about_blank">Find us on Facebook!</a></p>
 <div class="footer">
 &copy;<i>2015 - Mossneuk Parish Church</i> &nbsp;&nbsp; <a href="legal.html">Legal</a>
 </div>
